tests/neg-custom-args/captures/i21347.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21347.scala:8:2 -----------------------------------------
8 |  () => runOps(f :: Nil) // error
  |  ^^^^^^^^^^^^^^^^^^^^^^
  |  Found:    () ->{f} Unit
  |  Required: () -> Unit
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i21347.scala:11:15 ------------------------------------------------------------
11 |  ops.foreach: op => // error
   |               ^
   |               Local reach capability ops* leaks into capture scope of method runOpsAlt.
   |               To allow this, the parameter ops should be declared with a @use annotation
12 |    op()
